# federated-clustering-internal-validation-metrics

./: README.md  pyproject.toml  test-federated-cluster-valid.py
src/federated_clustering_validation/: calinski_harabasz.py
tests/: test-federated-cluster-valid.py
